<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diablo 3 Stats</string>
    <string name="short_name">D3 Stats</string>
    <string name="action_settings">Diablo 3 Stats</string>
    <string name="action_example">Diablo 3 Stats</string>
    <string name="title_section1">Diablo 3 Stats</string>
    <string name="title_section2">Diablo 3 Stats</string>
    <string name="title_section3">Diablo 3 Stats</string>
    <string name="navigation_drawer_open">Diablo 3 Stats</string>
    <string name="navigation_drawer_close">Diablo 3 Stats</string>
    <string name="heroe">Hero</string>
    <string name="pasivas">Passive Skills</string>
    <string name="equipo">Gear</string>
    <string name="eligeheroe">Choose a hero:</string>
    <string name="addheroe">Add hero</string>
    <string name="nombre">Name</string>
    <string name="add">Add</string>
    <string name="buscar">Search</string>
    <string name="cambiarequipo">Change equipment</string>
    <string name="cambiarpasivas">Change Passive Skills</string>
    <string name="estadistica">Stat</string>
    <string name="valor">Value</string>
    <string name="valorcomparar">Secondary value</string>
    <string name="fuerza">Strength</string>
    <string name="destreza">Dexterity</string>
    <string name="inteligencia">Intelligence</string>
    <string name="vitalidad">Vitality</string>
    <string name="armadura">Armor</string>
    <string name="hp">Maximun Life</string>
    <string name="dps">DPS</string>
    <string name="ElementalDPS">Elemental DPS</string>
    <string name="EliteDPS">Elite DPS</string>
    <string name="elegirpasivas">Choose passive skills:</string>
    <string name="guardar">Save</string>
    <string name="barbarian">Barbarian</string>
    <string name="crusader">Crusader</string>
    <string name="demonhunter">Demon Hunter</string>
    <string name="monk">Monk</string>
    <string name="wizard">Wizard</string>
    <string name="witchdoctor">Witch Doctor</string>
    <string name="clase">Class</string>
    <string name="resistencias">Resistance to All</string>
    <string name="pcritico">Critical Hit Chance (%)</string>
    <string name="dcritico">Critical Hit Damage (%)</string>
    <string name="velocidadataque">Attack Speed</string>
    <string name="atributo">Core Attributes</string>
    <string name="valorcomp">Sec. Value</string>
    <string name="stats">Stats</string>
    <string name="items">Items</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletehero">Delete Hero</string>
    <string name="deleteheroconf">Do you want to delete the hero?</string>
    <string name="errorpassive">Error: You have chosen the same passive several times.</string>
    <string name="errornamehero">Error: You must enter the name of the hero.</string>
    <string name="importar">Import</string>
    <string name="manual">Manual</string>
    <string name="battletag">Battle Tag</string>
    <string name="servidor">Server</string>
    <string name="getheroes">Getting heroes...</string>
    <string name="buscando">Searching</string>
    <string name="gethero">Getting hero...</string>
    <string name="horo">Gold Find</string>
    <string name="hmagico">Magic Find</string>
    <string name="robovida">Life Steal</string>
    <string name="vidagolpe">Life per Hit</string>
    <string name="reg_vida">Life per Second</string>
    <string name="rfisica">Physical Resistance</string>
    <string name="rfrio">Cold Resistance</string>
    <string name="rfuego">Fire Resistance</string>
    <string name="rrayos">Lightning Resistance</string>
    <string name="rveneno">Poison Resistance</string>
    <string name="rarcana">Arcane Resistance</string>
    <string name="aventura">Adventure</string>
    <string name="defensivas">Defensive</string>
    <string name="vida">Life</string>
    <string name="ofensivas">Offensive</string>
    <string name="update">Update from battle.net</string>
    <string name="actualizar">Update</string>
    <string name="cambiarnivel">Change level</string>
    <string name="nivel">Level</string>
    <string name="paragon">Paragon</string>
    <string name="errorgetdata">Error downloading data from battle.net</string>
    <string name="limpiar">Clean Values</string>
    <string name="info">Information</string>
    <string name="total">Total</string>
    <string name="incrementa">Increases</string>
    <string name="mostrar">Show/Hide All</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="itemdeleted">Hero deleted</string>
    <string name="taptoundo">Tap to undo</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="sort">Sort</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

</resources>