<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add"
        android:title="@string/add"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom"
        android:title="@string/sort">
        <menu>
            <item
                android:id="@+id/menuSortPosition"
                android:icon="@android:drawable/ic_menu_sort_by_size"
                android:title="Sort by position" />
            <item
                android:id="@+id/menuSortAlphabetically"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:title="Sort alphabetically" />
        </menu>
    </item>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>