<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.olmo.d3stats.ItemActivity">

    <TableLayout
        android:id="@+id/dpsTable"
        android:background="@drawable/card"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:id="@+id/textView" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Value"
                android:id="@+id/textView4"
                android:gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="New Value"
                android:id="@+id/textView5"
                android:gravity="right" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="%"
                android:id="@+id/textView6"
                android:gravity="right" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/dps"
                android:id="@+id/textViewDPS" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:id="@+id/textDPS"
                android:gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:id="@+id/textNewDPS"
                android:gravity="right" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:id="@+id/textDPSPercent"
                android:gravity="right" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ElementalDPS"
                android:id="@+id/textViewEDPS" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:id="@+id/textEDPS"
                android:gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:id="@+id/textNewEDPS"
                android:gravity="right" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:id="@+id/textEDPSPercent"
                android:gravity="right" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/EliteDPS"
                android:id="@+id/textViewEliteDPS" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:id="@+id/textEliteDPS"
                android:gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:id="@+id/textNewEliteDPS"
                android:gravity="right" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:id="@+id/textEliteDPSPercent"
                android:gravity="right" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card"
            android:padding="10dp"
            >

            <LinearLayout
                android:id="@+id/linearStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/imageView"
                        android:src="@drawable/unique_helm_103_x1_demonhunter_male"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="New Text"
                        android:id="@+id/textName"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>



                </LinearLayout>



                <TableLayout
                    android:id="@+id/tabla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentEnd="false">


                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >


                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:text="@string/estadistica"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/valor"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/valorcomp"
                            android:textStyle="bold"
                            android:singleLine="false" />

                    </TableRow>

                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearGems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TableLayout
                    android:id="@+id/tableGems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentEnd="false">


                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Gems"
                            android:textStyle="bold" />



                    </TableRow>

                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
